_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/BI_Proposal_Request_Form__c.object-meta.xml
<CustomObject>
    <label>Proposal Request Form</label>
    <nameField>
        <displayFormat>PRF-{00000}</displayFormat>
        <label>Proposal Request Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Request Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>