_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Accepted_Customer_Comments__c.field-meta.xml
<CustomField>
    <fullName>BI_Accepted_Customer_Comments__c</fullName>
    <label>Accepted Customer Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>