_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Account__c.field-meta.xml
<CustomField>
    <fullName>BI_Account__c</fullName>
    <formula>BI_Opportunity__r.Account.Name</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>