_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Action__c.field-meta.xml
<CustomField>
    <fullName>BI_Action__c</fullName>
    <formula>TEXT( BI_Opportunity__r.BI_Contract_Action__c)</formula>
    <inlineHelpText>Action on the PRF is automatically set from the &apos;Contract Action&apos; field on the Opportunity. To change the action for the PRF, update the &apos;Contract Action&apos; on the opportunity</inlineHelpText>
    <label>Action</label>
    <type>Text</type>
</CustomField>