_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Additional_Contract_Signatories__c.field-meta.xml
<CustomField>
    <fullName>BI_Additional_Contract_Signatories__c</fullName>
    <inlineHelpText>Enter Full name, title, and contact details for any additional contract signatories that may be required</inlineHelpText>
    <label>Additional Contract Signatories</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>