_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Analyst__c.field-meta.xml
<CustomField>
    <fullName>BI_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Analyst that is working on this proposal request. Leave blank if not applicable to your Sales Organization</inlineHelpText>
    <label>Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BI_Proposal_Request_Form_Analyst</relationshipName>
    <type>Lookup</type>
</CustomField>