_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Approved_Deal_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>BI_Approved_Deal_Snapshot__c</fullName>
    <label>Approved Deal Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>