_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Contacts_updated_in_UCS_for_Signature__c.field-meta.xml
<CustomField>
    <fullName>BI_Contacts_updated_in_UCS_for_Signature__c</fullName>
    <label>Contacts updated in UCS for Signature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>