_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Contract_Contact__c.field-meta.xml
<CustomField>
    <fullName>BI_Contract_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identify your primary contact for the company – also for CPA+ this individual will be listed for Perks Plus portion of program</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Proposal Request Forms (Contract Contact)</relationshipLabel>
    <relationshipName>Pricing_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>