_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>BI_Contract_End_Date__c</fullName>
    <formula>BI_Opportunity__r.BI_End_Date__c</formula>
    <inlineHelpText>Contract or Tactical Initiative end date on the PRF is automatically set from the Opportunity. To change the end date, update &apos;End Date&apos; field on the opportunity</inlineHelpText>
    <label>Contract  / Tactical End Date</label>
    <type>Date</type>
</CustomField>