_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Contract_Signatory__c.field-meta.xml
<CustomField>
    <fullName>BI_Contract_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Signatory</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Pricing_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>