_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Contract_Signatory_Notes_Instructions__c.field-meta.xml
<CustomField>
    <fullName>BI_Contract_Signatory_Notes_Instructions__c</fullName>
    <inlineHelpText>If customer accepts DocuSign, enter DocuSign routing Instructions. If DocuSign is not accepted, enter proposed next steps for signature</inlineHelpText>
    <label>Contract Signatory Notes / Instructions</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>