_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Contract_Strategy__c.field-meta.xml
<CustomField>
    <fullName>BI_Contract_Strategy__c</fullName>
    <label>Proposed Contract Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>