_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Country__c.field-meta.xml
<CustomField>
    <fullName>BI_Country__c</fullName>
    <description>Country in the address field for the account that the opportunity and related PRF pertains to</description>
    <formula>BI_Opportunity__r.Account.BillingCountry</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>