_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_CSS__c.field-meta.xml
<CustomField>
    <fullName>BI_CSS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>North America - the CSS that is working on this proposal request</inlineHelpText>
    <label>CSS / ACPG</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BI_Proposal_Request_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>