_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Current_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>BI_Current_Contract_Type__c</fullName>
    <label>Current Contract Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BI_Program_Type</valueSetName>
    </valueSet>
</CustomField>