_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Customer_Accepts_DocuSign__c.field-meta.xml
<CustomField>
    <fullName>BI_Customer_Accepts_DocuSign__c</fullName>
    <label>Customer Accepts DocuSign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>