_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Customer_Contract_FeedbackAcceptance__c.field-meta.xml
<CustomField>
    <fullName>BI_Customer_Contract_FeedbackAcceptance__c</fullName>
    <inlineHelpText>Please note, the specified questions may not be valid for all markets.</inlineHelpText>
    <label>Customer Contract Feedback/Acceptance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>