_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_DRA_Acknowledged_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>BI_DRA_Acknowledged_by_Customer__c</fullName>
    <label>DRA Acknowledged by Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>