_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Duration_in_Months__c.field-meta.xml
<CustomField>
    <fullName>BI_Duration_in_Months__c</fullName>
    <formula>BI_Opportunity__r.BI_Duration_in_Months__c</formula>
    <label>Duration in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>