_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Evergreen_Legal__c.field-meta.xml
<CustomField>
    <fullName>BI_Evergreen_Legal__c</fullName>
    <inlineHelpText>If currently on MCTA, is the contract &apos;Evergreen&apos;?</inlineHelpText>
    <label>Evergreen Legal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>