_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_GBTA_RFP_Form_Required__c.field-meta.xml
<CustomField>
    <fullName>BI_GBTA_RFP_Form_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GBTA RFP Form Required</label>
    <type>Checkbox</type>
</CustomField>