_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Industry__c.field-meta.xml
<CustomField>
    <fullName>BI_Industry__c</fullName>
    <formula>Text(BI_Opportunity__r.Account.Industry)</formula>
    <inlineHelpText>The Industry of the Account record on the Opportunity that this Proposal Request belongs to</inlineHelpText>
    <label>Industry</label>
    <type>Text</type>
</CustomField>