_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Legal_Contact__c.field-meta.xml
<CustomField>
    <fullName>BI_Legal_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Pricing_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>