_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Letter_of_Airline_Intro_up_to_Date__c.field-meta.xml
<CustomField>
    <fullName>BI_Letter_of_Airline_Intro_up_to_Date__c</fullName>
    <label>Letter of Airline Intro. up to Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>