_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Loss_Codes__c.field-meta.xml
<CustomField>
    <fullName>BI_Loss_Codes__c</fullName>
    <inlineHelpText>Codes that CCM uses to identify type of loss</inlineHelpText>
    <label>Loss Codes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquired By Corp. w/ OA Deal</fullName>
            </value>
            <value>
                <fullName>Acquired By Corp. w/ UA Deal</fullName>
            </value>
            <value>
                <fullName>OA Higher - AA (CPA)</fullName>
            </value>
            <value>
                <fullName>OA Higher - AA (No Deal)</fullName>
            </value>
            <value>
                <fullName>OA Higher - AA (Pass Plus)</fullName>
            </value>
            <value>
                <fullName>OA Higher - AA (PERKS)</fullName>
            </value>
            <value>
                <fullName>OA Higher - DL (CPA)</fullName>
            </value>
            <value>
                <fullName>OA Higher - DL (No Deal)</fullName>
            </value>
            <value>
                <fullName>OA Higher - DL (Pass Plus)</fullName>
            </value>
            <value>
                <fullName>OA Higher - DL (PERKS)</fullName>
            </value>
            <value>
                <fullName>OA Higher - OA (CPA)</fullName>
            </value>
            <value>
                <fullName>OA Higher - OA (No Deal)</fullName>
            </value>
            <value>
                <fullName>OA Higher - OA (Pass Plus)</fullName>
            </value>
            <value>
                <fullName>OA Higher - OA (PERKS)</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>UA Walkaway (CPA)</fullName>
            </value>
            <value>
                <fullName>UA Walkaway (No Deal)</fullName>
            </value>
            <value>
                <fullName>UA Walkaway (Pass Plus)</fullName>
            </value>
            <value>
                <fullName>UA Walkaway (PERKS)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>