_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Num_of_Days_for_Contract_Completion__c.field-meta.xml
<CustomField>
    <fullName>BI_Num_of_Days_for_Contract_Completion__c</fullName>
    <formula>IF(
((ISNULL(BI_Stage_Last_Modified_Date_TCC_Only__c) = FALSE) &amp;&amp; (ISNULL(BI_Stage_Last_Modified_Date_Submit_Only__c) = FALSE)),


IF((DateValue(BI_Stage_Last_Modified_Date_TCC_Only__c) == DateValue(BI_Stage_Last_Modified_Date_Submit_Only__c)), 1, (DateValue(BI_Stage_Last_Modified_Date_TCC_Only__c) -  DateValue(BI_Stage_Last_Modified_Date_Submit_Only__c))) , 
 
 
 (If((ISNULL(BI_Stage_Last_Modified_Date_INA_Only__c ) = FALSE) &amp;&amp; (ISNULL(BI_Stage_Last_Modified_Date_Submit_Only__c) = FALSE),
 
 IF((DateValue(BI_Stage_Last_Modified_Date_INA_Only__c) == DateValue(BI_Stage_Last_Modified_Date_Submit_Only__c)), 1, (DateValue(BI_Stage_Last_Modified_Date_INA_Only__c) -  DateValue(BI_Stage_Last_Modified_Date_Submit_Only__c))), 
 
 (If(((ISNULL(BI_Stage_Last_Modified_Date_LOS_Only__c) = FALSE) &amp;&amp; (ISNULL(BI_Stage_Last_Modified_Date_Submit_Only__c) = FALSE)), 
 
 IF((DateValue(BI_Stage_Last_Modified_Date_LOS_Only__c) == DateValue(BI_Stage_Last_Modified_Date_Submit_Only__c)), 1, (DateValue(BI_Stage_Last_Modified_Date_LOS_Only__c) -  DateValue(BI_Stage_Last_Modified_Date_Submit_Only__c))), 
 
 
 (if(((ISNULL(BI_Stage_Last_Modified_Date_NRC_Only__c) = FALSE) &amp;&amp; (ISNULL(BI_Stage_Last_Modified_Date_Submit_Only__c) = FALSE)), 
 IF((DateValue(BI_Stage_Last_Modified_Date_NRC_Only__c) == DateValue(BI_Stage_Last_Modified_Date_Submit_Only__c)), 1, (DateValue(BI_Stage_Last_Modified_Date_NRC_Only__c) -  DateValue(BI_Stage_Last_Modified_Date_Submit_Only__c))), 
 null)))
 
 ))
 
 
 
 
 
 
 
 ))</formula>
    <inlineHelpText>Number of days between the submitted date, and the date the proposal request reached either the TCC, INA, LOS, or NRC stage.</inlineHelpText>
    <label>Number of Days for Contract Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>