_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Number_of_Days_since_Submission__c.field-meta.xml
<CustomField>
    <fullName>BI_Number_of_Days_since_Submission__c</fullName>
    <formula>IF(AND(
(ISNULL(BI_Stage_Last_Modified_Date_TCC_Only__c) = TRUE),
(ISNULL(BI_Stage_Last_Modified_Date_INA_Only__c ) = TRUE),
(ISNULL(BI_Stage_Last_Modified_Date_LOS_Only__c) = TRUE),
(ISNULL(BI_Stage_Last_Modified_Date_NRC_Only__c) = TRUE),
(ISNULL(BI_Stage_Last_Modified_Date_Submit_Only__c) = FALSE)

), 
(NOW() - BI_Stage_Last_Modified_Date_Submit_Only__c), 
BI_Num_of_Days_for_Contract_Completion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If PRF is Open: Number of days between the submitted date, and Today&apos;s date. 
If PRF reached either TCC, INA, LOS, NRC: Number of days between the submitted date, and the date the PRF reached either the TCC, INA, LOS, or NRC stage</inlineHelpText>
    <label>Number of Days since Submission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>