_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>BI_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Pricing_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>