_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>BI_Opportunity_Owner__c</fullName>
    <formula>BI_Opportunity__r.Owner.LastName &amp; &quot;,&quot; &amp; BI_Opportunity__r.Owner.FirstName</formula>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>