_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Out_of_Bandwidth__c.field-meta.xml
<CustomField>
    <fullName>BI_Out_of_Bandwidth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out of Bandwidth (EMEAI/APAC)</label>
    <type>Checkbox</type>
</CustomField>