_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Pass_Plus_Tactical_Amenity_Offer__c.field-meta.xml
<CustomField>
    <fullName>BI_Pass_Plus_Tactical_Amenity_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tactical Amenity Offer</label>
    <type>Checkbox</type>
</CustomField>