_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Perks_Tour_Code_UCID__c.field-meta.xml
<CustomField>
    <fullName>BI_Perks_Tour_Code_UCID__c</fullName>
    <formula>BI_Opportunity__r.Account.BI_Perks_Plus_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows the Perks Plus ID as populated on the account profile, in the &apos;Partnership &amp; Alliance Information&apos; section. If you need a value for the Perks ID on the PRF, update the account profile.</inlineHelpText>
    <label>Perks/Tour Code/UCID</label>
    <type>Text</type>
</CustomField>