_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_PP_Contract_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>BI_PP_Contract_Contact_Email__c</fullName>
    <formula>BI_Contract_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary PassPlus Contact Email</label>
    <type>Text</type>
</CustomField>