_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_PP_Contract_Signatory_Email__c.field-meta.xml
<CustomField>
    <fullName>BI_PP_Contract_Signatory_Email__c</fullName>
    <formula>BI_Contract_Signatory__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PassPlus Contract Signatory Email</label>
    <type>Text</type>
</CustomField>