_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_PP_Cust_Existing_United_Contracts__c.field-meta.xml
<CustomField>
    <fullName>BI_PP_Cust_Existing_United_Contracts__c</fullName>
    <label>PassPlus Cust Existing United Contracts</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BI_Program_Type</valueSetName>
    </valueSet>
</CustomField>