_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_PP_Initial_Investment__c.field-meta.xml
<CustomField>
    <fullName>BI_PP_Initial_Investment__c</fullName>
    <label>PassPlus Initial Investment</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>