_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_PP_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>BI_PP_Mailing_Address__c</fullName>
    <formula>BI_Opportunity__r.Account.BillingStreet &amp; BR() &amp; 
BI_Opportunity__r.Account.BillingCity &amp; &quot;, &quot; &amp; 
BI_Opportunity__r.Account.BillingState &amp; &quot; &quot; &amp;
BI_Opportunity__r.Account.BillingPostalCode &amp; BR() &amp;
BI_Opportunity__r.Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>