_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_PP_Provisioned_Alloc_Amenities__c.field-meta.xml
<CustomField>
    <fullName>BI_PP_Provisioned_Alloc_Amenities__c</fullName>
    <formula>IF( BI_PP_Initial_Investment__c  != 0 &amp;&amp; !ISNULL( BI_PP_Initial_Investment__c ), BI_PP_Set_Amenities_Total_Value__c / BI_PP_Initial_Investment__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PassPlus Provisioned Alloc % Amenities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>