_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_PP_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>BI_PP_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PassPlus Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Proposal_Request_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>