_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_PP_Second_Agency_Contact__c.field-meta.xml
<CustomField>
    <fullName>BI_PP_Second_Agency_Contact__c</fullName>
    <label>PassPlus  Agency Contact</label>
    <length>200</length>
    <type>Text</type>
</CustomField>