_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_PP_Second_GDS_CRS__c.field-meta.xml
<CustomField>
    <fullName>BI_PP_Second_GDS_CRS__c</fullName>
    <label>PassPlus GDS/CRS</label>
    <length>10</length>
    <type>Text</type>
</CustomField>