_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_PP_Second_Pseudo_City_Code__c.field-meta.xml
<CustomField>
    <fullName>BI_PP_Second_Pseudo_City_Code__c</fullName>
    <label>PassPlus Pseudo City Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>