_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_PP_Second_Travel_Agency_ARC_IATA_Num__c.field-meta.xml
<CustomField>
    <fullName>BI_PP_Second_Travel_Agency_ARC_IATA_Num__c</fullName>
    <label>PassPlus Travel Agency ARC IATA Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>