_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_PP_Second_Travel_Agency_Street__c.field-meta.xml
<CustomField>
    <fullName>BI_PP_Second_Travel_Agency_Street__c</fullName>
    <label>PassPlus Travel Agency Street</label>
    <length>200</length>
    <type>Text</type>
</CustomField>