_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_PP_Secondary_Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>BI_PP_Secondary_Contact_Full_Name__c</fullName>
    <label>PassPlus Secondary Contact Full Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>