_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_PP_Set_Allocation_for_Amenities__c.field-meta.xml
<CustomField>
    <fullName>BI_PP_Set_Allocation_for_Amenities__c</fullName>
    <label>Contracted Amenity %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>