_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_PP_Set_Amenities_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>BI_PP_Set_Amenities_Total_Value__c</fullName>
    <label>PassPlus Set Amenities Total Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>