_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_PP_Special_Comments__c.field-meta.xml
<CustomField>
    <fullName>BI_PP_Special_Comments__c</fullName>
    <label>PassPlus Special Comments</label>
    <type>TextArea</type>
</CustomField>