_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_PP_Targeted_Amenities_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>BI_PP_Targeted_Amenities_Total_Value__c</fullName>
    <formula>BI_PP_Initial_Investment__c *  BI_PP_Set_Allocation_for_Amenities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PassPlus Targeted Amenities Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>