_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_PP_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>BI_PP_Tax_ID__c</fullName>
    <formula>BI_Opportunity__r.Account.BI_Tax_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax ID</label>
    <type>Text</type>
</CustomField>