_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_PP_Total_Contracted_Investment__c.field-meta.xml
<CustomField>
    <fullName>BI_PP_Total_Contracted_Investment__c</fullName>
    <label>PassPlus Total Contracted Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>