_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_PP_Travel_Agency_Email__c.field-meta.xml
<CustomField>
    <fullName>BI_PP_Travel_Agency_Email__c</fullName>
    <label>PassPlus Travel Agency Email</label>
    <type>Email</type>
</CustomField>