_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Primary_Proposal_Request_Inbox_Email__c.field-meta.xml
<CustomField>
    <fullName>BI_Primary_Proposal_Request_Inbox_Email__c</fullName>
    <defaultValue>$Label.BI_NA_Other_Region_Email</defaultValue>
    <label>Primary Proposal Request Inbox Email</label>
    <type>Email</type>
</CustomField>