_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Prism_Data_Valid__c.field-meta.xml
<CustomField>
    <fullName>BI_Prism_Data_Valid__c</fullName>
    <label>Prism Data Valid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>