_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>BI_Program_Type__c</fullName>
    <inlineHelpText>When a new PRF is created, the initial proposed contract types on the PRF will automatically be set to the Interested Program Type(s) on the opportunity</inlineHelpText>
    <label>Proposed Contract Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BI_Program_Type</valueSetName>
    </valueSet>
</CustomField>