_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Proposed_Annual_Amenity_Dollars__c.field-meta.xml
<CustomField>
    <fullName>BI_Proposed_Annual_Amenity_Dollars__c</fullName>
    <label>Proposed Annual Amenity Dollars</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>