_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Proposed_Annual_GS__c.field-meta.xml
<CustomField>
    <fullName>BI_Proposed_Annual_GS__c</fullName>
    <label>Contracted Global service #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>