_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_RFP__c.field-meta.xml
<CustomField>
    <fullName>BI_RFP__c</fullName>
    <formula>BI_Opportunity__r.BI_RFP__c</formula>
    <label>RFP</label>
    <type>Checkbox</type>
</CustomField>