_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_RFP_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>BI_RFP_Due_Date__c</fullName>
    <formula>BI_Opportunity__r.BI_RFP_Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RFP Due Date</label>
    <type>Date</type>
</CustomField>