_Source/force-app/main/default/objects/BI_Proposal_Request_Form__c/fields/BI_Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>BI_Sales_Organization__c</fullName>
    <label>Sales Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BI_Organization</valueSetName>
    </valueSet>
</CustomField>